@@ -1,3 +1,9 @@
+ags (0.9.2)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed possible concurrent access in ags-peak related code
+	* fixed led array related bug that didn't show animation of AgsCellPattern and AgsPatternBox
+
 ags (0.9.1)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
